[package]
name = "pug_html_locator"
version = "0.1.0"
edition = "2021"
authors = ["Connor McLaughlin <connor1211.mcl@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tree-sitter = "0.20.6"

[build-dependencies]
cc = "1.0"
